# ruset

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
