[package]
name = "ruset"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
description = "Custom and personal node_modules workflow"
authors = ["Noel Espino <hi@ednoesco.com>"]
repository = "https://github.com/slingercode/ruset"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
log = "0.4.19"
simple_logger = "4.2.0"
